# MazeLLM

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
backend/: baseline_agent.py  config.py  server.py
backend/agent/: dstar_lite.py  llm_agent.py  llm_client.py  prompts.py  tools.py
backend/baselines/: __init__.py  astar.py  bfs.py  dfs.py  maze.py  robot.py  solver.py  types.py
backend/maze/: generator.py  maze.py  robot.py
docs/: architecture-hub-diagram.excalidraw  maze-llm-robot-hub-diagram.excalidraw
frontend/: app.js  index.html  styles.css
mazellm/: __init__.py  agent.py  astar.py  bfs.py  board.py  chess_board_panels.tcss  cli.py  dfs.py  main.py  main_bfs.py  maze.py  openai_api_calling_demo.py  robot.py  solver.py  types.py
mazellm/visualizer/: __init__.py  maze_visualizer.tcss  panels.py
mazes/: sample_maze.json
scripts/: README.md  dataset_gen.py  eval_core.py  expert_client.py
scripts/LFM2.5-1.2B-Instruct/: README.md  generate.py  lfm2_format.py
scripts/llama-3.2-1b/: README.md  eval.py  expert_driver.py  generate.py  llama_format.py  train.py
scripts/llama-3.2-3b/: README.md  eval.py  expert_driver.py  generate.py  llama_format.py  train.py
scripts/qwen3.5/: README.md  generate.py  qwen_format.py
src/: maze.py  robot_agent.py  sample_data.py
tests/: pytest.ini  test_generator.py  test_llm_agent.py  test_maze.py  test_visualizer.py
tests/baselines/: test_astar.py  test_baseline_maze.py  test_baseline_robot.py  test_bfs.py  test_dfs.py
(+8 files in other folders)
